--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,14 +3,21 @@
   "plugins": ["prettier"], //prettier 플러그인을 사용한다.
   "rules": {
     "prettier/prettier": [
-      "error",
+      "off",
       {
         "useTabs": false,
         "endOfLine": "auto",
         "quoteProps": "as-needed",
         "doubleQuote": true,
         "trailingComma": "es5",
-        "parser": "flow"
+        "parser": "flow",
+        "arrow-body-style": "off",
+        "prefer-arrow-callback": "off",
+        "prettier/prettier": "off",
+        "no-console": "off",
+        "space-comment": "off",
+        "no-else-return": "off",
+        "import/prefer-default-export": "off"
       }
     ], //prettier에서 발생한 모든 스타일 경고를 에러로 취급한다.
     "no-unused-vars": "warn", //선언했으나 사용되지 않은 변수가 있다면 경고로 표시한다.
